compiler/tests/fa/errors/pure_impure_call.salam
// انتظار: خطا۰۱۲
// زبان: فارسی
تابع چاپگر(مقدار: صحیح): صحیح:
    چاپ مقدار
    بازگشت مقدار
تمام

خالص تابع دوبرابر(مقدار: صحیح): صحیح:
    بازگشت چاپگر(مقدار) * 2
تمام

تابع اصلی:
    چاپ دوبرابر(3)
تمام
